package usantatecla.mastermind.types;

public enum Error {
    
    DUPLICATED,
    WRONG_CHARACTERS,
    WRONG_LENGTH;
    
}
