
@startuml DocumentView
package Mastermind.models <<Rectangle>> {
    class Color{
        + {static} RED: Color
        + {static} BLUE: Color
        + {static} YELLOW: Color
        + {static} GREEN: Color
        + {static} ORANGE: Color
        + {static} PURPLE: Color
        - Color()
        + {static} length(): int
    }

    class Combination{
        - {static} WIDTH: int
        # colors: List<Color>
        # Combination()
        + {static} getWidth(): int
    }

    class Error{
        + {static} DUPLICATED: Error
        + {static} WRONG_CHARACTERS: Error
        + {static} WRONG_LENGTH: Error
    }

    class Board {
        - {static} MAX_ATTEMPS: int
        - secretCombination: SecretCombination
        - proposedCombinations: List<ProposedCombination>
        - results: List<Result>
        - attemps: int
        + Board()
        + clear(): void
        + play(ProposedCombination proposedCombination): void
        + isFinished(): int
        + isLooser(): boolean
        + isWinner(): boolean
        + getAttempts(): int
    }

    class ProposedCombination{
        + ProposedCombination()
        + contains(Color): boolean
        + contains(int, Color): boolean
    }

    class SecretCombination{
        + SecretCombination()
        + getResult(ProposedCombination proposedCombination): Result
    }

    class Result{
        - blacks: int
        - whites: int
        + Result(int, int)
        + isWinner(): boolean
        + getWhites(): int
        + getBlacks(): int
    }

    Board *---> java.util.List
    Board *---> java.util.ArrayList
    Board *---> SecretCombination
    Board *---> Result
    Board --> ProposedCombination
    Combination *---> Color
    Combination <|--- ProposedCombination
    ProposedCombination ..> Error
    Combination <|--- SecretCombination
    SecretCombination ..> Result
    SecretCombination ..> ProposedCombination
}
@enduml
